--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -35,22 +35,15 @@ body
                         a.ui-header__logo
                             img(src="/images/header-logo.png")
                     .col.col--lg-6.col--lg-flex.ui-header__info
-                        .ui-slogan
-                            p.
-                                Производство и продажа#[br]
-                                офисных перегородок
+                        .ui-slogan  Производство и продажа#[br] офисных перегородок
                         .ui-address
                             img(src="/images/location.png")
-                            p.
-                                Г. МОСКВА,#[br] 
-                                СОКОЛЬНИЧЕСКИЙ ВАЛ, 1А
+                            Г. МОСКВА,#[br]  СОКОЛЬНИЧЕСКИЙ ВАЛ, 1А
                         .ui-regim
-                            p.
-                                ПН-ЧТ 9:00 — 19:00#[br]
-                                ПТ 9:00 — 18:00
+                            ПН-ЧТ 9:00 — 19:00#[br]
+                            ПТ 9:00 — 18:00
                     .col.col--lg-3.text--lg-right
-                        .ui-phone
-                            p 8 (495) 663 18 81
+                        .ui-phone 8 (495) 663 18 81
         .ui-header__menu
     
     main
