--- a/frontend/src/_styles/_variable.styl
+++ b/frontend/src/_styles/_variable.styl
@@ -7,7 +7,7 @@ $color-darkcoral = #d65045
 $color-smokyblack = #130504
 $color-button = #fbfcfc
 $color-pagination = #f6f6f6
-$color-buttonattach = #212121
+$color-dark = #212121
 
 $breakpoints = {
   'xs' :  0,
