--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -23,7 +23,7 @@ head
     block stylesheets
         link(rel='stylesheet', href= baseUrl + 'styles/main.css')
 
-body
+body.ui-page
     <!--[if lt IE 9]>
     <p class='browsehappy'>You are using an <strong>outdated</strong> browser. Please <a href='http://browsehappy.com/'>upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -32,16 +32,14 @@ body
             .grid.grid-container.ui-restriction
                 .row.row--lg-center
                     .col.col--lg-2
-                        a.ui-header__logo
+                        a.ui-logo
                             img(src="/images/header-logo.png")
                     .col.col--lg-8.col--lg-flex.ui-header__info
                         .ui-slogan  Производство и продажа#[br] офисных перегородок
-                        .ui-address
+                        .ui-address.ui-address__header
                             img(src="/images/location.png")
                             Г. МОСКВА,#[br]  СОКОЛЬНИЧЕСКИЙ ВАЛ, 1А
-                        .ui-regim
-                            ПН-ЧТ 9:00 — 19:00#[br]
-                            ПТ 9:00 — 18:00
+                        .ui-regim ПН-ЧТ 9:00 — 19:00#[br] ПТ 9:00 — 18:00
                     .col.col--lg-2.text--lg-center
                         .ui-phone 8 (495) 663 18 81
         .ui-header__menu.grid.grid-container
@@ -69,9 +67,46 @@ body
                       a.ui-menu__link(href="") Контакты
                 .col.col--lg-2.ui-callback.js-show-callback
                     a.ui-button.ui-button--size-lg.ui-button--default.ui-button--block Перезвоните мне
-    main
+                    
+    main.ui-content
         block content
-    footer footer
-
+        
+    footer.ui-footer
+        .grid.grid-container.ui-restriction
+            .row.row--lg-center
+                .col.col--lg-2
+                    a.ui-logo
+                        img(src="/images/footer-logo.png")
+                .ui-address.col.col--lg-8 Г. МОСКВА,  СОКОЛЬНИЧЕСКИЙ ВАЛ, 1А
+                .col.col--lg-2.text--lg-right
+                    .ui-phone.ui-phone__footer 8 (495) 663 18 81
+            .row.row--lg-center
+                .col.col--lg-2
+                    .ui-slogan  Производство и продажа#[br] офисных перегородок
+                nav.ui-footer-menu.col.col--lg-8.col--lg-flex
+                  .ui-footer-menu__item
+                      a.ui-footer-menu__link(href="") Каталог
+                  .ui-footer-menu__item
+                      a.ui-footer-menu__link(href="") Конфигурации
+                  .ui-footer-menu__item
+                      a.ui-footer-menu__link(href="") Сервис
+                  .ui-footer-menu__item
+                      a.ui-footer-menu__link(href="") Проекты
+                  .ui-footer-menu__item
+                      a.ui-footer-menu__link(href="") Цены
+                  .ui-footer-menu__item
+                      a.ui-footer-menu__link(href="") Направления
+                  .ui-footer-menu__item
+                      a.ui-footer-menu__link(href="") О компании
+                  .ui-footer-menu__item
+                      a.ui-footer-menu__link(href="") Дилерам
+                  .ui-footer-menu__item
+                      a.ui-footer-menu__link(href="") Вопрос-ответ
+                  .ui-footer-menu__item
+                      a.ui-footer-menu__link(href="") Контакты
+                .col.col--lg-2.text--lg-right
+                    .ui-regim ПН-ЧТ 9:00 — 19:00#[br] ПТ 9:00 — 18:00
+        .ui-footer-copy 
+            .ui-copy.ui-restriction © 2001-2017 «ОКИ-ДОКИ»#[br] Все представленные материалы защищены авторскими правами. Воспроизведение или распространение указанных материалов в любой форме может#[br] производиться только с письменного разрешения правообладателя. При использовании, ссылка на правообладателя и источник заимствования обязательна.
     block scripts
         script(src= baseUrl + 'scripts/main.js')
