--- a/frontend/src/_styles/modules/button.styl
+++ b/frontend/src/_styles/modules/button.styl
@@ -27,7 +27,7 @@
         padding 7px 18px
         border-radius 3px
         line-height 32px
-        color $color-buttonattach
+        color $color-dark
         background-image -moz-linear-gradient( 90deg, rgb(221,229,238) 0%, rgb(221,229,238) 53%, rgb(255,255,255) 100%)
         background-image -webkit-linear-gradient( 90deg, rgb(221,229,238) 0%, rgb(221,229,238) 53%, rgb(255,255,255) 100%)
         background-image -ms-linear-gradient( 90deg, rgb(221,229,238) 0%, rgb(221,229,238) 53%, rgb(255,255,255) 100%)
