* frontend: добавлена сетка и внесены небольшие измнения в разметку

--- a/frontend/src/_styles/_variable.styl
+++ b/frontend/src/_styles/_variable.styl
@@ -14,7 +14,6 @@ $breakpoints = {
   'sm' : 544px,
   'md' : 768px,
   'lg' : 992px,
-  'xl' : 1200px,
-  'xxl' : 1500px
+  'xl' : 1200px
 }
 $columns = 12
