--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -29,10 +29,10 @@ body.ui-page
     <![endif]-->
     header.ui-header 
         .ui-header__content
-            .grid.grid-container.ui-restriction
+            .grid.grid--container
                 .row.row--lg-center
                     .col.col--lg-2
-                        a.ui-logo
+                        a.ui-logo(href="/")
                             img(src="/images/header-logo.png")
                     .col.col--lg-8.col--lg-flex.ui-header__info
                         .ui-slogan  Производство и продажа#[br] офисных перегородок
@@ -42,8 +42,8 @@ body.ui-page
                         .ui-regim ПН-ЧТ 9:00 — 19:00#[br] ПТ 9:00 — 18:00
                     .col.col--lg-2.text--lg-center
                         .ui-phone 8 (495) 663 18 81
-        .ui-header__menu.grid.grid-container
-            .ui-restriction.row.row--lg-center
+        .ui-header__menu.grid.grid--container
+            .row.row--lg-center
                 nav.ui-menu.col.col--lg-10.col--lg-flex
                   .ui-menu__item
                       a.ui-menu__link(href="") Каталог
@@ -65,21 +65,21 @@ body.ui-page
                       a.ui-menu__link(href="") Вопрос-ответ
                   .ui-menu__item
                       a.ui-menu__link(href="") Контакты
-                .col.col--lg-2.ui-callback.js-show-callback
+                .col.col--lg-2.js-show-callback
                     a.ui-button.ui-button--size-lg.ui-button--default.ui-button--block Перезвоните мне
                     
     main.ui-content
         block content
         
     footer.ui-footer
-        .grid.grid-container.ui-restriction
+        .grid.grid--container
             .row.row--lg-center
                 .col.col--lg-2
-                    a.ui-logo
+                    a.ui-logo(href="/")
                         img(src="/images/footer-logo.png")
                 .ui-address.col.col--lg-8 Г. МОСКВА,  СОКОЛЬНИЧЕСКИЙ ВАЛ, 1А
                 .col.col--lg-2.text--lg-right
-                    .ui-phone.ui-phone__footer 8 (495) 663 18 81
+                    .ui-phone__footer.ui-phone 8 (495) 663 18 81
             .row.row--lg-center
                 .col.col--lg-2
                     .ui-slogan  Производство и продажа#[br] офисных перегородок
@@ -106,7 +106,9 @@ body.ui-page
                       a.ui-footer-menu__link(href="") Контакты
                 .col.col--lg-2.text--lg-right
                     .ui-regim ПН-ЧТ 9:00 — 19:00#[br] ПТ 9:00 — 18:00
-        .ui-footer-copy 
-            .ui-copy.ui-restriction © 2001-2017 «ОКИ-ДОКИ»#[br] Все представленные материалы защищены авторскими правами. Воспроизведение или распространение указанных материалов в любой форме может#[br] производиться только с письменного разрешения правообладателя. При использовании, ссылка на правообладателя и источник заимствования обязательна.
+        .grid
+            .row.row--lg-center
+                .ui-footer-copy.col.col--lg-12
+                    .ui-copy © 2001-2017 «ОКИ-ДОКИ»#[br] Все представленные материалы защищены авторскими правами. Воспроизведение или распространение указанных материалов в любой форме может#[br] производиться только с письменного разрешения правообладателя. При использовании, ссылка на правообладателя и источник заимствования обязательна.
     block scripts
         script(src= baseUrl + 'scripts/main.js')
