* frontend: minor fix

--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -106,9 +106,9 @@ body.ui-page
                       a.ui-footer-menu__link(href="") Контакты
                 .col.col--lg-2.text--lg-right
                     .ui-regim ПН-ЧТ 9:00 — 19:00#[br] ПТ 9:00 — 18:00
-        .grid
-            .row.row--lg-center
-                .ui-footer-copy.col.col--lg-12
+        .grid.grid--no-gutters
+            .row.row--lg-center.row--no-gutters
+                .ui-footer-copy.col.col--lg-12.col--no-gutters
                     .ui-copy © 2001-2017 «ОКИ-ДОКИ»#[br] Все представленные материалы защищены авторскими правами. Воспроизведение или распространение указанных материалов в любой форме может#[br] производиться только с письменного разрешения правообладателя. При использовании, ссылка на правообладателя и источник заимствования обязательна.
     block scripts
         script(src= baseUrl + 'scripts/main.js')
