--- a/frontend/src/_styles/modules/button.styl
+++ b/frontend/src/_styles/modules/button.styl
@@ -86,18 +86,19 @@
         padding 8px
 
 .ui-circle-button
-    height 50px
-    width 50px
+    height 100%
+    width 100%
     overflow hidden
     position relative
     display inline-block
     text-decoration none
+    font-family 'Rubik'
 
     i
+        font-style normal
         position absolute
         bottom 15px
         right 15px
-        line-height 10px
         color #fff
         display block
 
@@ -107,6 +108,20 @@
         position absolute
         content ''
         border-radius 100px 100px 0 0
-        background-color $color-darkcoral
         transform-origin 50% 100%
         transform rotate(-90deg)
+        
+    &--red
+        &:before
+            background-color $color-darkcoral
+    
+    &--size-lg
+        i
+            bottom 15px
+            right 15px
+    &--size-md
+        i
+            line-height 18px
+            bottom 14px
+            right 15px
+            font-size 26px
