--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -1,19 +1,58 @@
 extends _layouts/base
 
-include _modules/link/link
-
 block content
+    .ui-project-home
+        .grid.grid--container
+            .row.row--lg-center.ui-project-home__header
+                .col.col--lg-11
+                    .ui-heading.ui-heading--white.ui-heading--lvl2 Истории проектов
+                .col.col--lg-1
+                    .ui-slider-nav
+                        a.ui-slider-nav__arrow.js-project-carousel-prew
+                            img(src="/images/icons/arrow-left.svg", alt="", height="47", width="16")
+                        span.ui-slider-nav__number.js-project-carousel-number 1
+                        a.ui-slider-nav__arrow.js-project-carousel-next
+                            img(src="/images/icons/arrow-rigth.svg", alt="", height="47", width="16")
+        .grid.grid--container.owl-carousel.owl-theme.js-project-carousel
+            .row
+                .col.col--lg-3
+                    .ui-project-home__content
+                        .ui-project-home__title Монтаж офисных перегородок для ООО «Фиас Констракшн»
+                        .ui-project-home__text Часто бывает, что заказчику необходимо в сжатые сроки разделить отдельно рабочие зоны, при этом выдержать деловой стиль и не стеснять пространство и без того не большого помещения.
+                        .ui-project-home__link
+                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                i +
+                .col.col--lg-6.col--lg-flex
+                    .ui-project-home__photo(style="background-image: url('/images/projects/1.jpg')")
+                .col.col--lg-3
+                    .ui-project-home__photo--small(style="background-image: url('/images/projects/1.jpg')")
+                    .ui-project-home__photo--small(style="background-image: url('/images/projects/1.jpg')")
 
-    div
-        a.ui-circle-button(href="#")
-            i +
-        a.ui-button.ui-button--size-lg.ui-button--default Кнопка
-        a.ui-button.ui-button--size-md.ui-button--pagination-prev Назад
-        a.ui-button.ui-button--size-md.ui-button--pagination-next Дальше
-        a.ui-button.ui-button--size-xs Прикрепить файл
-        ol.ui-steps-vertical
-            li Gtdsds sdfsdfds
-            li Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            li Gtdsds sdfsdfds
-            li start mixing up something awesome.
-    input.ui-input(type="text", placeholder="your name")
+            .row
+                .col.col--lg-3
+                    .ui-project-home__content
+                        .ui-project-home__title Монтаж офисных перегородок для ООО «Фиас Констракшн»
+                        .ui-project-home__text Часто бывает, что заказчику необходимо в сжатые сроки разделить отдельно рабочие зоны, при этом выдержать деловой стиль и не стеснять пространство и без того не большого помещения.
+                        .ui-project-home__link
+                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                i +
+                .col.col--lg-6.col--lg-flex
+                    .ui-project-home__photo(style="background-image: url('/images/projects/1.jpg')")
+                .col.col--lg-3
+                    .ui-project-home__photo--small(style="background-image: url('/images/projects/1.jpg')")
+                    .ui-project-home__photo--small(style="background-image: url('/images/projects/1.jpg')")
+            .row
+                .col.col--lg-3
+                    .ui-project-home__content
+                        .ui-project-home__title Монтаж офисных перегородок для ООО «Фиас Констракшн»
+                        .ui-project-home__text Часто бывает, что заказчику необходимо в сжатые сроки разделить отдельно рабочие зоны, при этом выдержать деловой стиль и не стеснять пространство и без того не большого помещения.
+                        .ui-project-home__link
+                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                i +
+                .col.col--lg-6.col--lg-flex
+                    .ui-project-home__photo(style="background-image: url('/images/projects/1.jpg')")
+                .col.col--lg-3
+                    .ui-project-home__photo--small(style="background-image: url('/images/projects/1.jpg')")
+                    .ui-project-home__photo--small(style="background-image: url('/images/projects/1.jpg')")
+
+    
