--- a/frontend/src/_styles/_variable.styl
+++ b/frontend/src/_styles/_variable.styl
@@ -5,7 +5,8 @@ $color-trolleygrey = #7d7d7d
 $color-isabelline = #f3f2e9
 $color-darkcoral = #d65045
 $color-smokyblack = #130504
-$color-button = #fbfcfc
+$color-platinum = #e6e6e6
+$color-snow = #fbfcfc
 $color-pagination = #f6f6f6
 $color-dark = #212121
 
