--- a/frontend/src/_styles/modules/button.styl
+++ b/frontend/src/_styles/modules/button.styl
@@ -38,7 +38,7 @@
 
     &--default
         background-color $color-darkcoral
-        color $color-button
+        color $color-snow
         border-color $color-darkcoral
 
         &:hover
@@ -47,11 +47,11 @@
 
     &--black
         background-color $color-black
-        color $color-button
+        color $color-snow
         border-color $color-smokyblack
 
         &:hover
-            background-color $color-button
+            background-color $color-snow
             color $color-smokyblack
 
     &--pagination-prev
@@ -62,7 +62,7 @@
         box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
 
         &:hover
-            background-color $color-button
+            background-color $color-snow
             color $color-smokyblack
 
     &--pagination-next
@@ -73,7 +73,7 @@
         box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
 
         &:hover
-            background-color $color-button
+            background-color $color-snow
             color $color-smokyblack
 
     &--block
@@ -110,11 +110,11 @@
         border-radius 100px 100px 0 0
         transform-origin 50% 100%
         transform rotate(-90deg)
-        
+
     &--red
         &:before
             background-color $color-darkcoral
-    
+
     &--size-lg
         i
             bottom 15px
