--- a/frontend/src/_styles/modules/heading.styl
+++ b/frontend/src/_styles/modules/heading.styl
@@ -1,10 +1,10 @@
 .ui-heading
 	margin 0
 	padding 0
-	
+
 	&--white
-		color #fcfcfc
-	
+		color $color-snow
+
 	&--lvl2
 		font-family 'Panton'
 		font-size 40px
