--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -103,6 +103,9 @@ init($breakpoints, $columns)
     a
         color #050505
         text-decoration none
+        display block
+        padding 9px 0 5px
+        border-bottom 3px solid rgba(255,255,255,0)
 
     &__link
         &:hover
@@ -136,46 +139,79 @@ init($breakpoints, $columns)
     text-align center
     font-size 12px
 
-.ui-project-home
-    background #fff url('/images/project-home-bg.jpg') no-repeat 50% 0
-    padding-bottom 30px
-    
+.ui-customer-reviews
+    background #fff url('/images/customer-reviews-bg.png') no-repeat 50% 0
+    padding 40px 0
+
     &__header
-        padding 40px 0 25px
-        
+        padding-bottom 25px
+
     &__content
-        height 387px
-        background #009ba4
-        color #fff
-        padding 30px 20px 60px 20px
-        position relative
-        
-    &__title
-        font-size 26px
-        line-height 36px
-        font-family 'Panton'
-        font-weight bold
-        
-    &__text
-        font-family 'Panton'
-        font-size 16px
-        line-height 26px
-        margin-top 35px
-        
+        display flex
+        flex-direction column
+
+    &__photo
+        background-repeat no-repeat
+        background-size cover
+        background-position 50% 50%
+        height 234px
+        width 100%
+
     &__link
         position absolute
         bottom 0
         right 0
         width 60px
         height 60px
-        
+
+    &__title
+        background $color-platinum
+        font-family 'Panton'
+        font-size 20px
+        color #1b1b1b
+        line-height 27px
+        padding 19px
+
+.ui-project-home
+    background #fff url('/images/project-home-bg.jpg') no-repeat 50% 0
+    padding-bottom 30px
+
+    &__header
+        padding 40px 0 25px
+
+    &__content
+        height 387px
+        background #009ba4
+        color #fff
+        padding 30px 20px 60px 20px
+        position relative
+
+    &__title
+        font-size 26px
+        line-height 36px
+        font-family 'Panton'
+        font-weight bold
+
+    &__text
+        font-family 'Panton'
+        font-size 16px
+        line-height 26px
+        margin-top 35px
+
+    &__link
+        position absolute
+        bottom 0
+        right 0
+        width 60px
+        height 60px
+
     &__photo
         background-repeat no-repeat
         background-size cover
         background-position 50% 50%
         height 387px
         width 100%
-        
+
         &--small
             height 185px
 
@@ -184,17 +220,16 @@ init($breakpoints, $columns)
 
 .ui-slider-nav
     display flex
-    width 100%
+    max-width 100px
     justify-content space-between
     align-items center
-    
+
     &__arrow
         cursor pointer
-    
+
     &__number
-        color #fcfcfc
+        color $color-snow
         line-height 40px
         font-size 32px
         font-family 'Rubik'
         font-weight 500
-        
