* frontend: исправлен слайдер для перегородок

--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -19,6 +19,24 @@ block content
                         .ui-customer-reviews__link
                             a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
                                 i +
+                    .ui-customer-reviews__content
+                        .ui-customer-reviews__photo(style="background-image: url('/images/сonfigurations/1.png')")
+                        .ui-customer-reviews__title Конфигурация офисных#[br] перегородок №М2
+                        .ui-customer-reviews__link
+                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                i +
+                    .ui-customer-reviews__content
+                        .ui-customer-reviews__photo(style="background-image: url('/images/сonfigurations/1.png')")
+                        .ui-customer-reviews__title Конфигурация офисных#[br] перегородок №М2
+                        .ui-customer-reviews__link
+                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                i +
+                    .ui-customer-reviews__content
+                        .ui-customer-reviews__photo(style="background-image: url('/images/сonfigurations/1.png')")
+                        .ui-customer-reviews__title Конфигурация офисных#[br] перегородок №М2
+                        .ui-customer-reviews__link
+                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                i +
         
     .ui-project-home
         .grid.grid--container
