--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -139,8 +139,8 @@ init($breakpoints, $columns)
     text-align center
     font-size 12px
 
-.ui-customer-reviews
-    background #fff url('/images/customer-reviews-bg.png') no-repeat 50% 0
+.ui-configuration
+    background #fff url('/images/configurations-bg.png') no-repeat 50% 0
     padding 40px 0
 
     &__header
@@ -168,9 +168,10 @@ init($breakpoints, $columns)
         background $color-platinum
         font-family 'Panton'
         font-size 20px
+        font-weight bold
         color #1b1b1b
         line-height 27px
-        padding 19px
+        padding 19px 60px 19px 19px
 
 .ui-project-home
     background #fff url('/images/project-home-bg.jpg') no-repeat 50% 0
