--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -1,40 +1,40 @@
 extends _layouts/base
 
 block content
-    .ui-customer-reviews
+    .ui-configuration
         .grid.grid--container
             .row
                 .col.col--xl-3
-                    .ui-customer-reviews__header.ui-heading.ui-heading--white.ui-heading--lvl2 Конфигурации перегородок
+                    .ui-configuration__header.ui-heading.ui-heading--white.ui-heading--lvl2 Конфигурации перегородок
                     .ui-slider-nav
-                        a.ui-slider-nav__arrow.js-customer-reviews-carousel-prew
+                        a.ui-slider-nav__arrow.js-configuration-carousel-prew
                             img(src="/images/icons/arrow-left.svg", alt="", height="47", width="16")
-                        span.ui-slider-nav__number.js-customer-reviews-carousel-number 1
-                        a.ui-slider-nav__arrow.js-customer-reviews-carousel-next
+                        span.ui-slider-nav__number.js-configuration-carousel-number 1
+                        a.ui-slider-nav__arrow.js-configuration-carousel-next
                             img(src="/images/icons/arrow-rigth.svg", alt="", height="47", width="16")
-                .col.col--xl-9.owl-carousel.owl-theme.js-customer-reviews-carousel
-                    .ui-customer-reviews__content
-                        .ui-customer-reviews__photo(style="background-image: url('/images/сonfigurations/1.png')")
-                        .ui-customer-reviews__title Конфигурация офисных#[br] перегородок №М2
-                        .ui-customer-reviews__link
+                .col.col--xl-9.owl-carousel.owl-theme.js-configuration-carousel
+                    .ui-configuration__content
+                        .ui-configuration__photo(style="background-image: url('/images/сonfigurations/1.png')")
+                        .ui-configuration__title Конфигурация офисных#[br] перегородок №М2
+                        .ui-configuration__link
                             a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
                                 i +
-                    .ui-customer-reviews__content
-                        .ui-customer-reviews__photo(style="background-image: url('/images/сonfigurations/1.png')")
-                        .ui-customer-reviews__title Конфигурация офисных#[br] перегородок №М2
-                        .ui-customer-reviews__link
+                    .ui-configuration__content
+                        .ui-configuration__photo(style="background-image: url('/images/сonfigurations/1.png')")
+                        .ui-configuration__title Конфигурация офисных#[br] перегородок №М2
+                        .ui-configuration__link
                             a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
                                 i +
-                    .ui-customer-reviews__content
-                        .ui-customer-reviews__photo(style="background-image: url('/images/сonfigurations/1.png')")
-                        .ui-customer-reviews__title Конфигурация офисных#[br] перегородок №М2
-                        .ui-customer-reviews__link
+                    .ui-configuration__content
+                        .ui-configuration__photo(style="background-image: url('/images/сonfigurations/1.png')")
+                        .ui-configuration__title Конфигурация офисных#[br] перегородок №М2
+                        .ui-configuration__link
                             a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
                                 i +
-                    .ui-customer-reviews__content
-                        .ui-customer-reviews__photo(style="background-image: url('/images/сonfigurations/1.png')")
-                        .ui-customer-reviews__title Конфигурация офисных#[br] перегородок №М2
-                        .ui-customer-reviews__link
+                    .ui-configuration__content
+                        .ui-configuration__photo(style="background-image: url('/images/сonfigurations/1.png')")
+                        .ui-configuration__title Конфигурация офисных#[br] перегородок №М2
+                        .ui-configuration__link
                             a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
                                 i +
         
