--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -42,31 +42,32 @@ body.ui-page
                         .ui-regim ПН-ЧТ 9:00 — 19:00#[br] ПТ 9:00 — 18:00
                     .col.col--xl-2.col--md-3.text--xl-center
                         .ui-phone 8 (495) 663 18 81
-        .ui-header__menu.grid.grid--container
-            .row.row--xl-center
-                nav.ui-menu.col.col--xl-10.col--xl-flex
-                  .ui-menu__item
-                      a.ui-menu__link(href="") Каталог
-                  .ui-menu__item
-                      a.ui-menu__link(href="") Конфигурации
-                  .ui-menu__item
-                      a.ui-menu__link(href="") Сервис
-                  .ui-menu__item
-                      a.ui-menu__link(href="") Проекты
-                  .ui-menu__item
-                      a.ui-menu__link(href="") Цены
-                  .ui-menu__item
-                      a.ui-menu__link(href="") Направления
-                  .ui-menu__item
-                      a.ui-menu__link(href="") О компании
-                  .ui-menu__item
-                      a.ui-menu__link(href="") Дилерам
-                  .ui-menu__item
-                      a.ui-menu__link(href="") Вопрос-ответ
-                  .ui-menu__item
-                      a.ui-menu__link(href="") Контакты
-                .col.col--xl-2.js-show-callback
-                    a.ui-button.ui-button--size-lg.ui-button--default.ui-button--block Перезвоните мне
+        .ui-header__menu
+            .grid.grid--container
+                .row.row--xl-center
+                    nav.ui-menu.col.col--xl-10.col--xl-flex
+                      .ui-menu__item
+                          a.ui-menu__link(href="") Каталог
+                      .ui-menu__item
+                          a.ui-menu__link(href="") Конфигурации
+                      .ui-menu__item
+                          a.ui-menu__link(href="") Сервис
+                      .ui-menu__item
+                          a.ui-menu__link(href="") Проекты
+                      .ui-menu__item
+                          a.ui-menu__link(href="") Цены
+                      .ui-menu__item
+                          a.ui-menu__link(href="") Направления
+                      .ui-menu__item
+                          a.ui-menu__link(href="") О компании
+                      .ui-menu__item
+                          a.ui-menu__link(href="") Дилерам
+                      .ui-menu__item
+                          a.ui-menu__link(href="") Вопрос-ответ
+                      .ui-menu__item
+                          a.ui-menu__link(href="") Контакты
+                    .col.col--xl-2.js-show-callback
+                        a.ui-button.ui-button--size-lg.ui-button--default.ui-button--block Перезвоните мне
                     
     main.ui-content
         block content
