--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -140,7 +140,7 @@ init($breakpoints, $columns)
     font-size 12px
 
 .ui-configuration
-    background #fff url('/images/configurations-bg.png') no-repeat 50% 0
+    background #fff url('/images/baffle-bg.png') no-repeat 50% 0
     padding 40px 0
 
     &__header
