--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -234,3 +234,33 @@ init($breakpoints, $columns)
         font-size 32px
         font-family 'Rubik'
         font-weight 500
+
+.ui-companies
+    font-family 'Rubik'
+    font-size 26px
+    color #393939
+    padding-bottom 30px
+
+    span
+        font-weight bold
+
+    &__header
+        font-family 'Panton'
+        font-size 40px
+        line-height 70px
+        color $color-darkcoral
+
+    &__title
+        line-height 50px
+        padding-left 15px
+
+    &__element
+        display flex
+        justify-content center
+        align-items center
+        background url('/images/clients-line-bg.png') no-repeat
+        height 121px
+        padding-left 30px
+
+    &__element-first
+        background none
