--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -92,4 +92,25 @@ block content
                     .ui-project-home__photo--small(style="background-image: url('/images/projects/1.jpg')")
                     .ui-project-home__photo--small(style="background-image: url('/images/projects/1.jpg')")
 
-    
+    .ui-companies
+        .grid.grid--container
+            .row.row--xl-center
+                .col.col--xl-12
+                    .ui-companies__header Нас выбирают
+            .row.row--xl-center.ui-companies-list
+                .col.col--xl-4.col--no-gutters 
+                    .ui-companies__title С нами работает 
+                        span более 5000 
+                        |#{' '} компаний
+                .col.col--xl-2
+                    .ui-companies__element.ui-companies__element-first
+                        img(src="/images/companies/resch-logo.png")
+                .col.col--xl-2
+                    .ui-companies__element
+                        img(src="/images/companies/rgd-logo.png")
+                .col.col--xl-2
+                    .ui-companies__element
+                        img(src="/images/companies/nord-strean-logo.png")
+                .col.col--xl-2
+                    .ui-companies__element
+                        img(src="/images/companies/viscom.png")
