--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -92,6 +92,42 @@ block content
                     .ui-project-home__photo--small(style="background-image: url('/images/projects/1.jpg')")
                     .ui-project-home__photo--small(style="background-image: url('/images/projects/1.jpg')")
 
+    .ui-customer-reviews
+        .grid.grid--container
+            .row
+                .col.col--xl-4
+                    .ui-customer-reviews__header.ui-heading.ui-heading--white.ui-heading--lvl2 Отзывы клиентов
+                    .ui-slider-nav.ui-slider-nav__no-number
+                        a.ui-slider-nav__arrow.js-customer-reviews-carousel-prew
+                            img(src="/images/icons/arrow-left.svg", alt="", height="47", width="16")
+                        a.ui-slider-nav__arrow.js-customer-reviews-carousel-next
+                            img(src="/images/icons/arrow-rigth.svg", alt="", height="47", width="16")
+                .col.col--xl-8.owl-carousel.owl-theme.js-customer-reviews-carousel
+                    .ui-customer-reviews__content
+                        .ui-customer-reviews__photo(style="background-image: url('/images/customer-reviews/asteros-logo.png')")
+                        .ui-customer-reviews__title ООО «Астерос #[br]сервис»
+                        .ui-customer-reviews__link
+                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                i +
+                    .ui-customer-reviews__content
+                        .ui-customer-reviews__photo(style="background-image: url('/images/customer-reviews/coral-logo.png')")
+                        .ui-customer-reviews__title ООО «Корал#[br] тревел»
+                        .ui-customer-reviews__link
+                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                i +
+                    .ui-customer-reviews__content
+                        .ui-customer-reviews__photo(style="background-image: url('/images/customer-reviews/m-logistic-logo.png')")
+                        .ui-customer-reviews__title ООО «М-Логистик#[br] Компани»
+                        .ui-customer-reviews__link
+                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                i +
+                    .ui-customer-reviews__content
+                        .ui-customer-reviews__photo(style="background-image: url('/images/customer-reviews/swsoft-logo.png')")
+                        .ui-customer-reviews__title ООО «СВсофт #[br] МФТИ»
+                        .ui-customer-reviews__link
+                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                i +
+                                
     .ui-companies
         .grid.grid--container
             .row.row--xl-center
