--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -235,6 +235,42 @@ init($breakpoints, $columns)
         font-family 'Rubik'
         font-weight 500
 
+    &__no-number
+        max-width 70px
+
+.ui-customer-reviews
+    background #fff url('/images/customer-reviews-bg.png') no-repeat 50% 0
+    padding 40px 0
+
+    &__content
+      display flex
+      flex-direction column
+      position relative
+
+    &__header
+        padding-bottom 25px
+
+    &__photo
+        background #fff
+        background-repeat no-repeat
+        background-position 50% 50%
+        height 100px
+
+    &__title
+        font-size 20px
+        line-height 26px
+        font-family 'Panton'
+        font-weight bold
+        background #e8e8e8
+        padding 19px
+
+    &__link
+        position absolute
+        bottom 0
+        right 0
+        width 60px
+        height 60px
+
 .ui-companies
     font-family 'Rubik'
     font-size 26px
@@ -260,7 +296,7 @@ init($breakpoints, $columns)
         align-items center
         background url('/images/clients-line-bg.png') no-repeat
         height 121px
-        padding-left 30px
+        padding-left 10px
 
     &__element-first
         background none
